--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>net.md-5</groupId>
     <artifactId>SpecialSource</artifactId>
-    <version>1.8.6-SNAPSHOT</version>
+    <version>1.8.6</version>
     <packaging>jar</packaging>
 
     <name>SpecialSource</name>
