major: remove debug names

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
 }
 
+task install(dependsOn: [publishToMavenLocal])
+
 java {
     withSourcesJar()
 }
